@@ -20,14 +20,14 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 /**
- * Request中的属性值
- * @version : 2013-5-9
- * @author 赵永春 (zyc@hasor.net)
+ * 请求参数
+ * @version : 2015年6月16日
+ * @author 赵永春(zyc@hasor.net)
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ ElementType.PARAMETER, ElementType.FIELD })
 @Documented
-public @interface AttributeParam {
+public @interface ReqParam {
     /**参数名称。*/
     public String value();
 }
