@@ -17,6 +17,7 @@ package net.hasor.mvc.support;
 import java.lang.reflect.Method;
 import java.util.concurrent.atomic.AtomicBoolean;
 import net.hasor.core.ApiBinder;
+import net.hasor.mvc.ModelController;
 import net.hasor.mvc.api.result.Forword;
 import net.hasor.mvc.api.result.Include;
 import net.hasor.mvc.api.result.Redirect;
@@ -55,7 +56,7 @@ public abstract class ControllerModule extends WebModule {
             helper.loadResultProcess(Include.class, IncludeResultProcess.class);
             helper.loadResultProcess(Redirect.class, RedirectResultProcess.class);
             //
-            apiBinder.bindType(DefineList.class, apiBinder.autoAware(new DefineList()));
+            apiBinder.bindType(ResultDefineList.class, apiBinder.autoAware(new ResultDefineList()));
             apiBinder.bindType(RootController.class).toInstance(apiBinder.autoAware(new RootController()));
             apiBinder.filter("/*").through(new ControllerFilter());
         }
@@ -64,12 +65,11 @@ public abstract class ControllerModule extends WebModule {
     protected abstract void loadController(LoadHellper helper);
     /**
      * 创建 {@link MappingInfoDefine}
-     * @param newID 唯一ID
      * @param atMethod 映射的方法
      * @param strategyFactory CallStrategy 工厂。
      * @return 返回mvc定义。
      */
-    protected MappingInfoDefine createMappingDefine(String newID, Method atMethod) {
-        return new MappingInfoDefine(newID, atMethod);
+    public MappingInfoDefine createMappingDefine(Class<? extends ModelController> clazz) {
+        return new MappingInfoDefine(clazz);
     }
 }
